--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="pref_sort_by_top_rated_entry">Sort by top rated</string>
     <string name="pref_sort_by_top_rated_value" translatable="false">top-rated</string>
 
+    <string name="pref_show_favorites_only_label">Only show favorites movies</string>
+    <string name="pref_show_favorites_only_key" translatable="false">show_favorites_only</string>
+
     <string name="tools_movie_tile">Movie Title</string>
     <string name="tools_movie_release_date">2000-00-00</string>
     <string name="tools_movie_vote_average">9.9/10</string>
