--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="pref_sort_by_top_rated_entry">Sort by top rated</string>
     <string name="pref_sort_by_top_rated_value" translatable="false">top-rated</string>
 
-    <string name="pref_show_favorites_only_label">Only show favorites movies</string>
-    <string name="pref_show_favorites_only_key" translatable="false">show_favorites_only</string>
+    <string name="pref_sort_by_favorites_only_entry">Show favorites only</string>
+    <string name="pref_sort_by_favorites_only_value" translatable="false">favorite-only</string>
 
     <string name="tools_movie_tile">Movie Title</string>
     <string name="tools_movie_release_date">2000-00-00</string>
@@ -27,7 +27,7 @@
     <string name="tools_movie_duration">999min</string>
     <string name="tools_movie_overview">Lorem Ipsum</string>
     <string name="tools_trailer_tile">Trailer Title</string>
-    <string name="tools_review_author">Author o' Thereview</string>
+    <string name="tools_review_author">Author o\' Thereview</string>
     <string name="tools_review_content">Ipsum Lorem</string>
 
     <string name="average_vote_label">Vote Average</string>
