--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
 
     <string name="share_trailer">Share trailer</string>
 
+    <string name="empty_favorite_movies_list">Your favorites movies will be shown here</string>
+
     <!-- preferences -->
     <string name="preferences_title">Settings</string>
     <string name="pref_sort_criterion_title">Movie listing</string>
